Fixes and changes in methods for supplying test data